# pomo-tracker

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  database.db  pyproject.toml
.github/: CODE_OF_CONDUCT.MD  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: quality-checks.yml
src/: database.db  main.py  pages_nav_bar.py  timer.py  timer_page.py
src/assets/subject_icons/: svgclean.py
src/components/base/: HeatMapSquare.py  ImagePicker.py  IslandContainer.py
src/components/composite/: CustomWindowHeader.py  FeedCard.py  HeatMapGrid.py  PagesNavBar.py  SubjectEditor.py  SubjectTrackingGraph.py  TimerControls.py  TimerModePanel.py
src/core/: DBManager.py  DatabaseManager.py  DesignLanguage.py  DiscordRPCManager.py  PomoUtilities.py  PomoUtils.py  SubjectUtilities.py  SubjectUtils.py  Timer.py  TimerPageUtilities.py  TimerPageUtils.py  enums.py  timer.py
src/database/: local_db.py
src/pages/: DesignLanguage.py  FeedPage.py  StatsPage.py  TimerPage.py  timer_page.py
src/pages/FeedPage/: FeedCard.py  FeedPage.py
src/pages/StatsPage/: GraphTracker.py  HeatMapGrid.py  HeatMapSquare.py  StatsPage.py
src/pages/TimerPage/: ImagePicker.py  SubjectEditor.py  TimerControls.py  TimerModeAndSubjectControls.py  TimerPage.py
src/pages/timer_page/: TimerControls.py  TimerModeAndSubjectControls.py  timer_page.py
storage/data/: database.db
