[project]
name = "Pomo-Tracker"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "DJisaiah", email = "" }
]
# clean this up
dependencies = [
  "flet-audio==0.84.0",
  "flet==0.84.0",
  "pypresence==4.6.1",
  "flet-charts==0.84.0"
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.djisaiah"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "Pomo-Tracker"

# company name to display in about app dialogs
company = "djisaiah"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by DJisaiah"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.84.0",
    "flet-audio==0.84.0"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}
