[project]
name = "Pomo-Tracker"
version = "0.1.2"
description = "A Pomodoro productivity tracker app"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "DJisaiah", email = "djisaiah_dev@hotmail.com" }
]

dependencies = [
    "python-dotenv>=1.0.1",
    "flet[all]==0.85.3",
    "flet-audio==0.85.3",
    "flet-charts==0.85.3",
    "pypresence==4.6.1"
]

[project.optional-dependencies]
dev = [
    "ruff==0.15.20",
    "pyright"
]

[tool.flet]
org = "com.djisaiah"
product = "Pomo-Tracker"
company = "djisaiah"
copyright = "Copyright (C) 2026 by DJisaiah"

[tool.flet.app]
path = "src"

[tool.flet.splash]
dark_color = "#000000"

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pyright]
include = ["src"]
typeCheckingMode = "basic"
reportMissingParameterType = "error"
reportMissingReturnType = "error"
reportUnknownArgumentType = "warning"
